# ffmpegwithpy

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  Lint.yml  Test.yml
ffmpegwithpy/: __init__.py  ffmpeg.py  get.py
ffmpegwithpy/util/: install_ffmpeg.py
tests/: test_ffmpeg.py  test_get.py
