[tool.poetry]
name = "ffmpegwithpy"
version = "0.1.1"
description = "Python FFmpeg wrapper."
authors = ["My <84212641+My-MC@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = {extras = ["jupyter"], version = "^22.3.0"}
notebook = "^6.4.12"
isort = "^5.10.1"
taskipy = "^1.10.2"
mypy = "^0.961"
flake8 = "^4.0.1"
Flake8-pyproject = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | .venv
    | dist
    | build
)
'''

[tool.isort]
profile = "black"
line_length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = "E203"
max-complexity = 10

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.taskipy.tasks]
fmt-black = "black feature ffmpegwithpy tests"
fmt-isort = "isort ffmpegwithpy tests"
fmt = "task fmt-black && task fmt-isort"
lint-mypy = "mypy ffmpegwithpy"
lint-flake8 = "flake8p ffmpegwithpy tests"
lint = "task lint-mypy && task lint-flake8"